gcc/testsuite/gdc.test/fail_compilation/imports/b18219.d
module b18219;

class Foobar
{
    int a;
    this(int a)
    {
        this.a = a;
    }
    static int smeth()
    {
        return 1;
    }
}
void fun() {}
